fix jump year on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -660,6 +660,10 @@ body {
     margin-right: auto;
 }
 
+.yearAccordion #jumpWideScreen {
+    display: none;
+}
+
 #yearJump {
     width: 100%;
 }
